--- a/docker/Dockerfile.github
+++ b/docker/Dockerfile.github
@@ -21,7 +21,7 @@ RUN \
     sed -i 's|security.debian.org/debian-security|mirrors.aliyun.com/debian-security|g' /etc/apt/sources.list.d/debian.sources && \
     apt-get update && \
     apt-get install ffmpeg libsm6 libxext6  -y && \
-    ip install --verbose -r /app/ocr/requirements-cpu.txt && \
+    pip install --verbose -r /app/ocr/requirements-cpu.txt && \
     rm -rf /app/ocr/requirements-cpu.txt && \
     rm -rf /root/.cache && \
     rm -rf /tmp/* && \
